Controls: Prevent timeline touch when not visible
It could happen when you played a video and then tapped in the place
where the timeline shows on mobile tap

--- a/skin/sass/state.sass
+++ b/skin/sass/state.sass
@@ -120,6 +120,9 @@
       &.is-live-position
         .fp-duration
           color: #00abcd
+  &.is-mouseout:not(.is-splash):not(.is-seeking):not(.fixed-controls)
+    .fp-timeline
+      pointer-events: none
   &.is-tiny:not(.is-fullscreen)
     font-size: .7em
   &.is-small:not(.is-fullscreen)
